--- a/src/components/App/Introduction/styles.module.css
+++ b/src/components/App/Introduction/styles.module.css
@@ -1,14 +1,20 @@
-.container{
+.background{
     background-image: url('./images/cloud background.jpg');
     background-position: center;
     background-size: cover;
     width: 100%;
+}
+
+.container{
+    display: block;
+    margin: auto;
+    width: 1260px;
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 2.5rem;
+    padding: 50px;
 }
 
 .text{
