--- a/src/components/App/DesignerPortfolio/styles.module.css
+++ b/src/components/App/DesignerPortfolio/styles.module.css
@@ -1,9 +1,116 @@
+.outerContainer{
+    display: block;
+    margin: auto;
+    width: 1250px;
+}
+
 .container{
     display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-rows: 500px;
+    align-content: center;
+    column-gap: 30px;
+    width: 850px;
+    padding: 50px;
 }
 
 .header{
+    grid-column: 1/3;
     display: block;
     width: 500px;
     margin: auto;
+}
+
+.greeting{
+    display: block;
+    text-align: center;
+    width: 200px;
+    margin: auto;
+    font-family: 'Playfair Display', sans-serif;
+    color: #9884a9;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.desc{
+    display: block;
+    text-align: center;
+    width: 600px;
+    margin: auto;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    color: #111111;
+}
+
+.designerInfo {
+    grid-row: 1/4;
+    border-radius: 20px;
+    background-color: #9884a9;
+    width: 440px;
+    padding: 100px 10px;
+    justify-self: right;
+}
+
+.gridItem{
+    padding: 20px;
+}
+
+.title{
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-size: 14px;
+}
+
+.info {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color: white;
+}
+
+.designerImage{
+    object-fit: contain;
+    height: 450px;
+    border-radius: 20px;
+    filter: grayscale(100%);
+}
+
+.stats{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 100px;
+    width: 550px;
+}
+
+
+.statsTitle{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #4e5B67;
+    font-weight: bold;
+}
+
+.data{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 72px;
+    color: #9884a9;
+
+}
+
+#socialMedia{
+    padding: 10px;
+    display: flex;
+    width: 100px;
+    justify-content: space-between;
+    color: white;
+}
+.icon:hover{
+    color: grey;
+    cursor: pointer;
+}
+
+.MUIbutton{
+    width: 500px;
+    height: 50px;
+    align-self: flex-end;
 }
