--- a/src/components/App/Introduction/styles.module.css
+++ b/src/components/App/Introduction/styles.module.css
@@ -23,6 +23,7 @@
     font-size: 1.2rem;
     width: 300px;
     font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .imageCredit{
@@ -31,12 +32,14 @@
     font-size: 1.2rem;
     width: 300px;
     font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .freepik{
     text-decoration-line: underline;
     color: white;
     font-weight: bold;
+    font-family: 'Playfair Display', serif;
 }
 
 .freepik:hover{
@@ -44,11 +47,12 @@
 }
 
 .purpleBox {
-    font-family: 'Inter Tight', sans-serif;
-    font-size: 2.3rem;
+    font-family: 'Playfair Display', serif;
+    font-size: 3.3rem;
+    line-height: 60px;
     background-color: #9884a9;
-    padding: 1.5rem;
+    padding: 2.5rem;
     color: white;
-    font-weight: bold;
-    width: 500px;
+    font-weight: 900;
+    width: 700px;
 }
