--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&family=Playfair+Display&family=Poppins:wght@300&display=swap');
 
 * {
     padding: 0px;
