--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&family=Playfair+Display&family=Poppins:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 * {
     padding: 0px;
     margin: 0px;
