--- a/src/components/App/ImageCarousel/styles.module.css
+++ b/src/components/App/ImageCarousel/styles.module.css
@@ -1,30 +1,60 @@
+.background{
+    height: 600px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("./images/blackBackground.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.testimonials{
+    padding: 40px;
+    color: white;
+    font-size: 48px;
+    font-family: "Playfair Display", serif;
+}
 
 .container{
+    background-color: white;
     position: relative;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
-    width: 600px;
+    width: 500px;
+    height: 500px;
+
 }
 
 .window{
+    position: relative;
     overflow: hidden;
-    width: 400px;
+    width: 500px;               /* including the sum of the width and the padding of slide*/
+    height: 500px;              /* including the sum of the width and the padding of slide*/
 }
 
 .tracker{
     display: flex;
+    top: 20px;
+    position: absolute;
+    left: 0px;
+    transition: left 0.3s ease-in;
 }
 
 
-.slideContainer{
-    width: 600px;
+.slide{
+    background-color: white;
+    padding: 50px;
+    width: 400px;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-right: 1px dotted grey;
 }
 
 
@@ -32,10 +62,12 @@
 .slideImage{
     object-fit: contain;
     width: 100px; 
+    padding: 10px;
 }
 
 .desc, .title, .position {
     color: #111111;
+    padding: 10px;
 }
 
 .title, .position {
@@ -45,6 +77,8 @@
 .desc{
     font-family: 'Open Sans', sans-serif;
     font-size: 17px;
+    width: 300px;
+    text-align: center;
 }
 
 .title{
@@ -55,7 +89,66 @@
     font-size: 14px;
 }
 
+.arrowBackgroundLeft, .arrowBackgroundRight{
+    cursor: pointer;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #9884a9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrowBackgroundLeft:hover, .arrowBackgroundRight:hover{
+    transform: scale(1.1, 1.1);
+}
+
+.arrowBackgroundLeft {
+    left: -80px;
+}
+
+.arrowBackgroundRight {
+    right: -80px;
+}
+
+
+.arrowLeft, .arrowRight {
+    color: white;
+    font-size: 30px;
+}
+
 .dot{
     background-color: #b3b3b3;
-    width: 20px;
+    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+}
+
+.dotNav{
+    padding: 15px;
+    width: 100px;
+    height: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+}
+
+.dot:hover{
+    background-color: grey;
+}
+
+.currentSlide{
+    color: none;
+}
+
+.currentDot{
+    color: none;
+}
+
+.eventBubbling {
+    pointer-events: none;
 }
