--- a/src/components/App/BuildProductsSection/styles.module.css
+++ b/src/components/App/BuildProductsSection/styles.module.css
@@ -10,6 +10,7 @@
     grid-template-columns: repeat(3, 400px);
     justify-content: center;
     gap: 30px;
+    padding-bottom: 30px;
 
 }
 
@@ -42,11 +43,20 @@
 }
 
 .imagesFromFreePik{
-    font-family: "Opens Sans", serif;
+    font-family: "Open Sans", serif;
     font-size: 16px;
     color: #111111;
     grid-column: 1/4;
     text-align: center;
+}
+
+.link{
+    text-decoration: underline ;
+    cursor: pointer;
+}
+
+.link:hover{
+    color: grey;
 }
 
 .button{
