--- a/src/components/App/EleganceTextSection/styles.module.css
+++ b/src/components/App/EleganceTextSection/styles.module.css
@@ -1,9 +1,10 @@
 .background{
     width: 100%;
     background-color: #f8f8f8;
+    height: 800px;
 }
 .container{
-    width: 1250px;
+    width: 1000px;
     height: 600px;
     padding: 80px 0px;
     display: flex;
