--- a/src/components/App/NumberedTextBoxes/styles.module.css
+++ b/src/components/App/NumberedTextBoxes/styles.module.css
@@ -2,33 +2,63 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     align-content: center;
-    width: 1400px;
+    width: 1000px;
     margin: auto;
     padding: 50px;
+    transition: padding 0.1s ease-in;
+    list-style-type: none;
+}
+
+.gridItem{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.number{
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: black;
+    margin: 10px 20px 20px 20px; 
 }
 
 .textbox{   
     font-family: 'Open Sans', sans-serif;
-    padding: 1.5rem; 
-    width: 400px;
+    padding: 10px 30px 30px 30px; 
+    width: 390px;
     display: block;
-    margin: auto;
-    position: relative;
     color: #666666
 }
 
 .background{
-    width: 80%;
-    display: block;
-    margin: auto;
     background-color: rgb(236, 236, 236);
 }
 
-.textbox:before{
-    font-weight: bold;
-    font-size: 1.4rem;
-    position: absolute;
-    left: -30px;
-    top: 21px;
-    content: attr(data-value) ' ';
+
+@media (max-width: 1000px){
+    .container{
+        width: 100%;
+    }
+}
+
+@media (max-width: 1300px) {
+    .container{
+        padding-left:0px;
+    }
+}
+
+@media (max-width: 860px) {
+    .container{
+        grid-template-columns: repeat(1, minmax(0, 1fr))
+    }
+    .gridItem{
+        flex-direction: column;
+        width: 90%;
+        display: block;
+        margin: auto;
+    }
+    .textbox{
+        width: 90%;
+    }
+
 }
