--- a/src/components/App/BuildProductsSection/styles.module.css
+++ b/src/components/App/BuildProductsSection/styles.module.css
@@ -7,7 +7,7 @@
 
 .imageCollection{
     display: grid;
-    grid-template-columns: repeat(3, 400px);
+    grid-template-columns: repeat(3, 300px);
     justify-content: center;
     gap: 30px;
     padding-bottom: 30px;
@@ -25,15 +25,15 @@
 }
 
 .imageBox{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     overflow: hidden;
 }
 
 .imageItem{
     object-fit: cover;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     cursor: pointer;
     transition: transform 0.4s ease-in;
 }
@@ -63,4 +63,27 @@
     grid-column: 1/4;
     width: 300px;
     justify-self: center;
+}
+
+@media (max-width: 1000px){
+    .title, .button, .imagesFromFreePik{
+        grid-column: 1/3;
+    }
+
+    .imageCollection{
+        grid-template-columns: repeat(2, 300px);
+    }
+}
+
+@media (max-width: 660px){
+    .title, .button, .imagesFromFreePik{
+        grid-column: 1/2;
+    }
+
+    .imageCollection{
+        grid-template-columns: repeat(1, 300px);
+    }
+    .button{
+        width: 50%;
+    }
 }
