--- a/src/components/App/EleganceTextSection/styles.module.css
+++ b/src/components/App/EleganceTextSection/styles.module.css
@@ -5,7 +5,7 @@
 }
 .container{
     width: 1000px;
-    height: 600px;
+    height: auto;
     padding: 80px 0px;
     display: flex;
     margin: auto;
@@ -39,4 +39,41 @@
     margin: 50px 0px;
     font-size: 16px;
     width: 480px;
+}
+
+@media (max-width: 1020px){
+    .container{
+        width: 600px;
+    }
+    .background{
+        height: auto;
+        padding-bottom: 100px; 
+    }
+
+}
+
+@media (max-width: 630px){
+    .container{
+        width: 80%;
+    }
+
+    .innerContainer{
+        flex-direction: column;
+    }
+
+    .textBoxOne, .textBoxTwo, .title{
+        width: 100%;
+    }
+    .title{
+        font-size: 36px;
+    }
+
+    .textBoxOne{
+        font-size: 16px;
+    }
+
+    .textBoxTwo{
+        margin-top: 0px;
+        font-size: 16px;
+    }
 }
