--- a/src/components/App/ThankYou/styles.module.css
+++ b/src/components/App/ThankYou/styles.module.css
@@ -6,12 +6,12 @@
     justify-content: center;
     align-items: center;
     height: 800px;
-    backdrop-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .thankYou{
     padding: 50px;
-    border: 5px solid #9884a9;
+    border: 10px solid #9884a9;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -22,4 +22,15 @@
     color: white;
     font-size: 96px;
     font-family: "Playfair Display", serif;
+    font-weight: 900;
+}
+
+@media (max-width: 400px) {
+    .thankYou{
+        width: 250px;
+        padding: 20px 0px 20px 0px;
+    }
+    .text{
+        font-size: 80px;
+    }
 }
